--- a/pages/code/fzm.html
+++ b/pages/code/fzm.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block header %}
-    {{ macros.ch(f) }}
+    {{ macros.pwd(["code", "fzm"]) }}
 {% endblock %}
 
 {% block content %}
