--- a/pages/imgs/pfp.html
+++ b/pages/imgs/pfp.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block header %}
-    {{ macros.ih(img) }}
+    {{ macros.pwd(["imgs", "pfp"]) }}
 {% endblock %}
 
 {% block content %}
