--- a/pages/index.html
+++ b/pages/index.html
@@ -8,10 +8,11 @@
 <p>::: welcome to tox.wtf :)</p>
 
 <ul>
-    <li><a href=pkgs>pkgs</a> ::: reference package bulid instructions</il>
-    <li><a href=logs>logs</a> ::: log entries</il>
-    <li><a href=imgs>imgs</a> ::: images</il>
-    <li><a href=code>code</a> ::: scripts and things</il>
+    <li><a href=pkgs/>pkgs/</a> ::: reference package bulid instructions</il>
+    <li><a href=logs/>logs/</a> ::: log entries</il>
+    <li><a href=imgs/>imgs/</a> ::: images</il>
+    <li><a href=code/>code/</a> ::: scripts and things</il>
+    <li><a href=self/>self/</a> ::: self</il>
 </ul>
 
 {% endblock %}
