--- a/pages/pkgs/less.html
+++ b/pages/pkgs/less.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block header %}
-    {{ macros.ph(pkg) }}
+    {{ macros.pwd(["pkgs", "less"]) }}
 {% endblock %}
 
 {% block content %}
