--- a/pages/index.html
+++ b/pages/index.html
@@ -13,6 +13,7 @@
     <li><a href=imgs/>imgs/</a> ::: images</il>
     <li><a href=code/>code/</a> ::: scripts and things</il>
     <li><a href=self/>self/</a> ::: self</il>
+    <li><a href=read/>read/</a> ::: radical reading corner</il>
 </ul>
 
 {% endblock %}
