--- a/pages/index.html
+++ b/pages/index.html
@@ -8,7 +8,7 @@
 <p>::: welcome to tox.wtf :)</p>
 
 <ul>
-    <li><a href=pkgs/>pkgs/</a> ::: reference package bulid instructions</il>
+    <li><a href=pkgs/>pkgs/</a> ::: reference package build instructions</il>
     <li><a href=logs/>logs/</a> ::: log entries</il>
     <li><a href=imgs/>imgs/</a> ::: images</il>
     <li><a href=code/>code/</a> ::: scripts and things</il>
