--- a/pages/pkgs/xxhash.html
+++ b/pages/pkgs/xxhash.html
@@ -9,12 +9,12 @@
 
 <pre>
 <code>
-git clone --depth=1 https://github.com/haampie/libtree .
+tmpwtf=$(mktemp -d /tmp/XXX.wtf)
+git clone --depth=1 https://github.com/haampie/libtree $tmpwtf
 
-make PREFIX=/usr DISPATCH=1
-make PREFIX=/usr DISPATCH=1 install
-
-rm -vf /usr/lib/libxxhash.a
+make -C $tmpwtf PREFIX=/usr DISPATCH=1
+make -C $tmpwtf PREFIX=/usr DISPATCH=1 install
+rm -rf  $tmpwtf /usr/lib/libxxhash.a
 </code>
 </pre>
 
