--- a/pages/base.html
+++ b/pages/base.html
@@ -16,10 +16,11 @@
         </h1>
 
         <nav>
-            <a href="/pkgs/">/pkgs/</a> |
-            <a href="/logs/">/logs/</a> |
-            <a href="/imgs/">/imgs/</a> |
             <a href="/code/">/code/</a> |
+            <a href="/imgs/">/imgs/</a> |
+            <a href="/logs/">/logs/</a> |
+            <a href="/pkgs/">/pkgs/</a> |
+            <a href="/read/">/read/</a> |
             <a href="/self/">/self/</a>
         </nav>
     </header>
