--- a/pages/imgs/pfp.html
+++ b/pages/imgs/pfp.html
@@ -38,6 +38,6 @@ unshackling, vivid clarity.
 that was actually less story than i thought.
 </p>
 
-<img src="/s/imgs/pfp.jpg" alt="ergo proxy pfp">
+<img src="/s/imgs/pfp.jpg" alt="ergo proxy pfp" width=360 height=360>
 
 {% endblock %}
