--- a/pages/index.html
+++ b/pages/index.html
@@ -8,12 +8,12 @@
 <p>::: welcome to tox.wtf :)</p>
 
 <ul>
-    <li><a href=code/>code/</a> ::: scripts and things</il>
-    <li><a href=imgs/>imgs/</a> ::: images</il>
-    <li><a href=logs/>logs/</a> ::: log entries</il>
-    <li><a href=pkgs/>pkgs/</a> ::: reference package build instructions</il>
-    <li><a href=read/>read/</a> ::: radical reading corner</il>
-    <li><a href=self/>self/</a> ::: self</il>
+    <li><a href=code/>code/</a> ::: scripts and things</li>
+    <li><a href=imgs/>imgs/</a> ::: images</li>
+    <li><a href=logs/>logs/</a> ::: log entries</li>
+    <li><a href=pkgs/>pkgs/</a> ::: reference package build instructions</li>
+    <li><a href=read/>read/</a> ::: radical reading corner</li>
+    <li><a href=self/>self/</a> ::: self</li>
 </ul>
 
 {% endblock %}
