--- a/pages/pkgs/entr.html
+++ b/pages/pkgs/entr.html
@@ -9,16 +9,11 @@
 
 <pre>
 <code>
-tmpwtf=$(mktemp -d /tmp/XXX.wtf)
-git clone --depth=1 https://github.com/eradman/entr $tmpwtf
+git clone --depth=1 https://github.com/eradman/entr .
 
-pushd $tmpwtf >/dev/null
 ./configure
 make
 make PREFIX=/usr install
-popd >/dev/null
-
-rm -rf $tmpwtf
 </code>
 </pre>
 
