--- a/pages/pkgs/less.html
+++ b/pages/pkgs/less.html
@@ -9,10 +9,8 @@
 
 <pre>
 <code>
-tmpwtf=$(mktemp -d /tmp/XXX.wtf)
-git clone --depth=1 https://github.com/gwsw/less $tmpwtf
+git clone --depth=1 https://github.com/gwsw/less .
 
-pushd $tmpwtf >/dev/null
 make -f Makefile.aut distfiles
 autoreconf -fiv
 
@@ -23,9 +21,6 @@ autoreconf -fiv
 
 make
 make install
-popd >/dev/null
-
-rm -rf $tmpwtf
 </code>
 </pre>
 
