--- a/pages/self/about.html
+++ b/pages/self/about.html
@@ -8,12 +8,8 @@
 <p>::: information about tox.wtf</p>
 
 <p>
-tox.wtf is my personal website. it's a hobbyist site that catalogs my projects,
-interests, etc. it also hosts some lfs-related information.
-</p>
-
-<p>
-for more about me, check out <a href="./bio">./bio</a>
+tox.wtf is my little enclave of internet real estate. i host these stupid pages
+as well as files and projects here.
 </p>
 
 {% endblock %}
