--- a/pages/pkgs/catgirl.html
+++ b/pages/pkgs/catgirl.html
@@ -9,21 +9,13 @@
 
 <pre>
 <code>
-tmpwtf=$(mktemp -d /tmp/XXX.wtf)
-git clone --depth=1 https://git.causal.agency/catgirl $tmpwtf
+git clone --depth=1 https://git.causal.agency/catgirl .
 
-pushd $tmpwtf >/dev/null
 sed -i '/dev:/d' Makefile
 
-./configure         \
-    --prefix=/usr   \
-    --mandir=/usr/share/man
-
+./configure --prefix=/usr --mandir=/usr/share/man
 make
 make install
-popd >/dev/null
-
-rm -rf $tmpwtf
 </code>
 </pre>
 
