--- a/pages/pkgs/libtree.html
+++ b/pages/pkgs/libtree.html
@@ -9,13 +9,10 @@
 
 <pre>
 <code>
-tmpwtf=$(mktemp -d /tmp/XXX.wtf)
-git clone --depth=1 https://github.com/haampie/libtree $tmpwtf
+git clone --depth=1 https://github.com/haampie/libtree .
 
-make -C $tmpwtf
-make -C $tmpwtf PREFIX=/usr install
-
-rm -rf $tmpwtf
+make
+make PREFIX=/usr install
 </code>
 </pre>
 
