--- a/pages/pkgs/rg.html
+++ b/pages/pkgs/rg.html
@@ -9,15 +9,11 @@
 
 <pre>
 <code>
-tmpwtf=$(mktemp -d /tmp/XXX.wtf)
-git clone --depth=1 https://github.com/burntsushi/ripgrep $tmpwtf
+git clone --depth=1 https://github.com/burntsushi/ripgrep .
 
-pushd $tmpwtf >/dev/null
 cargo build --release --features=pcre2
-install -vm755 target/release/rg -t /usr/bin/
-popd >/dev/null
+install -vDm755 target/release/rg -t /usr/bin/
 
-rm -rf $tmpwtf
 rg --generate complete-bash |
     install -vDm644 /dev/stdin /usr/share/bash-completion/completions/rg
 rg --generate man           |
