--- a/pages/read/freedom.html
+++ b/pages/read/freedom.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block header %}
-    {{ macros.pwd(["self", "about"]) }}
+    {{ macros.pwd(["read", "freedom"]) }}
 {% endblock %}
 
 {% block content %}
