--- a/pages/base.html
+++ b/pages/base.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8">
     <link href="/s/style.css" rel="stylesheet">
     <title>tox.wtf</title>
+    <link rel="icon" type="image/x-icon" href="/s/imgs/favicon.ico">
 </head>
 
 <body>
