feat: add img/renders

--- a/pages/imgs/index.html
+++ b/pages/imgs/index.html
@@ -9,6 +9,7 @@
 <p>::: various images</p>
 
 <ul>
+    <li><a href="renders/">renders/</a> ::: images ive made</li>
     <li><a href="pfp">pfp</a> ::: my profile picture</li>
 </ul>
 
