feat: add contacts page

--- a/pages/self/index.html
+++ b/pages/self/index.html
@@ -11,6 +11,7 @@
 <ul>
     <li><a href="about">about</a> ::: about this site</li>
     <li><a href="bio">bio</a> ::: about me</li>
+    <li><a href="contacts">bio</a> ::: send me shit</li>
 </ul>
 
 {% endblock %}
