fix: tweak contacts

--- a/pages/self/contacts.html
+++ b/pages/self/contacts.html
@@ -17,7 +17,7 @@
 <!-- TODO: Self-host forgejo or stagit or cgit or something -->
 <h3>git hosts</h3>
 <ul>
-    <li><a href="https://git.gay/tox">git.gay</a></li>
+    <li><a href="https://git.gay/tox">gitgay</a></li>
     <li><a href="https://github.com/tox-wtf">github</a></li>
 </ul>
 
