feat: add subdomains link to self

--- a/pages/self/index.html
+++ b/pages/self/index.html
@@ -12,6 +12,7 @@
     <li><a href="about">about</a> ::: about this site</li>
     <li><a href="bio">bio</a> ::: about me</li>
     <li><a href="contacts">contacts</a> ::: send me shit</li>
+    <li><a href="subdomains">subdomains</a> ::: *.tox.wtf</li>
 </ul>
 
 {% endblock %}
