feat: change style

--- a/pages/base.html
+++ b/pages/base.html
@@ -10,19 +10,16 @@
 </head>
 
 <body>
-    <header>
-        <h1>
-            <a href="/">tox.wtf</a>
-        </h1>
-    </header>
-
     <main>
         {% block header %}{% endblock %}
         {% block content %}{% endblock %}
+
+        <p><a onclick="history.back()">EOF</a></p>
     </main>
 
     <footer>
-        <p><a onclick="history.back()">EOF</a></p>
+        <h3 class="logo">Ŧ</h3>
+        <p>tox.wtf</p>
     </footer>
 </body>
 
