--- a/pages/code/index.html
+++ b/pages/code/index.html
@@ -6,10 +6,14 @@
 
 {% block content %}
 
-<p>::: code snippets, scripts, etc.</p>
+<h3>::: Snippets, scripts, and such</h3>
+
+<p>
+    This page just hosts random code. If you're looking for my projects, check
+    out <a href="https://git.tox.wtf/">git.tox.wtf</a>.
+</p>
 
 <ul>
-    <li><a href="tinaries/">tinaries/</a></li>
     <li><a href="fzm.sh">fzm.sh</a></li>
 </ul>
 
