--- a/pages/e/404.html
+++ b/pages/e/404.html
@@ -2,11 +2,11 @@
 {% block content %}
 
 <h2><a href=/>/</a><a href=/???/>???/</a></h2>
-<p>::: 404</p>
+<h3>::: 404</h3>
 
 <p>
-looks like whatever you're looking for doesn't exist. lmk if i fucked something
-up.
+Looks like whatever you're looking for doesn't exist. Kindly alert me if I
+fucked something up.
 </p>
 
 {% endblock %}
