--- a/pages/imgs/index.html
+++ b/pages/imgs/index.html
@@ -6,11 +6,11 @@
 
 {% block content %}
 
-<p>::: various images</p>
+<h3>::: Various images</h3>
 
 <ul>
-    <li><a href="renders/">renders/</a> ::: images ive made</li>
-    <li><a href="pfp">pfp</a> ::: my profile picture</li>
+    <li><a href="renders/">renders/</a> ::: Images I've made</li>
+    <li><a href="pfp">pfp</a> ::: My profile picture</li>
 </ul>
 
 {% endblock %}
