--- a/pages/imgs/renders/0000-descent.html
+++ b/pages/imgs/renders/0000-descent.html
@@ -5,12 +5,12 @@
 {% endblock %}
 
 {% block content %}
-<p>::: 0000-descent</p>
+<h3>::: 0000-descent</h3>
 
 <p>
-my first svg render. this was a recreation of
+This is my first svg render. This is a recreation of
 <a href="https://antireal.info/image/165813454037">one of antireal's renders</a>
-to familiarize myself with inkscape.
+made to familiarize myself with Inkscape.
 </p>
 
 <a href="/s/imgs/renders/0000-descent.svg" target="_blank">
@@ -18,8 +18,9 @@ to familiarize myself with inkscape.
 </a>
 
 <p>
-this took around 4 hours from first opening inkscape, to playing around with
-assets, to assembling the final image. i'm pretty happy with how it turned out.
+This took around 4 hours from first opening Inkscape, to familiarizing myself
+with the UI, to playing around with making assets, to assembling the final
+image. I'm pretty happy with how it turned out.
 </p>
 
 {% endblock %}
