--- a/pages/imgs/renders/index.html
+++ b/pages/imgs/renders/index.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-<p>::: rendered images i've made</p>
+<h3>::: Renders I've made</h3>
 
 <ul>
     <li><a href="0000-descent">0000-descent</a></li>
