--- a/pages/index.html
+++ b/pages/index.html
@@ -5,7 +5,9 @@
     <a href=/>/</a>
 </h2>
 
-<p>::: welcome to tox.wtf :)</p>
+<h3>::: Welcome to tox.wtf :)</h3>
+
+<p>This my silly little personal site. Check out one of these subdirectories:</p>
 
 <ul>
     <li><a href=code/>code/</a> ::: scripts and things</li>
