--- a/pages/pkgs/index.html
+++ b/pages/pkgs/index.html
@@ -6,17 +6,18 @@
 
 {% block content %}
 
-<p>::: instructions for building packages</p>
+<h3>::: Reference instructions for building packages</h3>
 
 <p>
-there's no particular rationale behind what packages do and don't get covered
-here. if you'd like to suggest a package or contribute your own directions,
+There's no particular rationale behind what packages do and don't get covered
+here. If you'd like to suggest a package or contribute your own directions,
 contact me, submit a pr, etc.
 </p>
 
 <p>
-note that all the package build instructions will pollute your build directory
-and may confuse your package manager as they install to /usr.
+Note that all the package build instructions will pollute your build directory
+and may confuse your package manager as they install to /usr. These are, after
+all, reference build instructions.
 </p>
 
 <ul>
