--- a/pages/pkgs/less.html
+++ b/pages/pkgs/less.html
@@ -5,11 +5,9 @@
 {% endblock %}
 
 {% block content %}
-<p>::: text pager</p>
+<h3>::: Text pager</h3>
 
-<pre>
-<code>
-git clone --depth=1 https://github.com/gwsw/less .
+<pre><code>git clone --depth=1 https://github.com/gwsw/less .
 
 make -f Makefile.aut distfiles
 autoreconf -fiv
@@ -21,7 +19,6 @@ autoreconf -fiv
 
 make
 make install
-</code>
-</pre>
+</code></pre>
 
 {% endblock %}
