--- a/pages/pkgs/libtree.html
+++ b/pages/pkgs/libtree.html
@@ -5,15 +5,12 @@
 {% endblock %}
 
 {% block content %}
-<p>::: ldd as a tree</p>
+<h3>::: ldd as a tree</h3>
 
-<pre>
-<code>
-git clone --depth=1 https://github.com/haampie/libtree .
+<pre><code>git clone --depth=1 https://github.com/haampie/libtree .
 
 make
 make PREFIX=/usr install
-</code>
-</pre>
+</code></pre>
 
 {% endblock %}
