--- a/pages/read/index.html
+++ b/pages/read/index.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-<p>::: byte-sized radical reading material</p>
+<h3>::: Byte-sized radical reading material</h3>
 
 <ul>
     <li><a href="freedom">freedom</a></li>
