--- a/pages/read/terror.html
+++ b/pages/read/terror.html
@@ -5,25 +5,25 @@
 {% endblock %}
 
 {% block content %}
-<p>::: the two terrors</p>
+<h3>::: The two terrors</h3>
 
 <p>
-there were two “reigns of terror,” if we would but remember it and consider it;
+There were two "reigns of terror," if we would but remember it and consider it;
 the one wrought murder in hot passion, the other in heartless cold blood; the
 one lasted mere months, the other had lasted a thousand years; the one inflicted
 death upon ten thousand persons, the other upon a hundred millions; but our
-shudders are all for the “horrors” of the minor terror, the momentary terror, so
+shudders are all for the "horrors" of the minor terror, the momentary terror, so
 to speak; whereas, what is the horror of swift death by the axe, compared with
-lifelong death from hunger, cold, insult, cruelty, and heart-break? what is
-swift death by lightning compared with death by slow fire at the stake? a city
+lifelong death from hunger, cold, insult, cruelty, and heart-break? What is
+swift death by lightning compared with death by slow fire at the stake? A city
 cemetery could contain the coffins filled by that brief terror which we have all
-been so diligently taught to shiver at and mourn over; but all france could
+been so diligently taught to shiver at and mourn over; but all France could
 hardly contain the coffins filled by that older and real terror -- that
 unspeakably bitter and awful terror which none of us has been taught to see in
 its vastness or pity as it deserves.
 </p>
 <p>
-    -- mark twain, <i>a connecticut yankee in king arthur's court</i>
+    -- Mark Twain, <i>A Connecticut Yankee in King Arthur's Court</i>
 </p>
 
 {% endblock %}
