--- a/pages/self/about.html
+++ b/pages/self/about.html
@@ -5,10 +5,10 @@
 {% endblock %}
 
 {% block content %}
-<p>::: information about tox.wtf</p>
+<h3>::: Information about tox.wtf</h3>
 
 <p>
-tox.wtf is my little enclave of internet real estate. i host these stupid pages
+This site is my little enclave of <i>the internet</i>. I host these stupid pages
 as well as files and projects here.
 </p>
 
