--- a/pages/self/contacts.html
+++ b/pages/self/contacts.html
@@ -5,20 +5,20 @@
 {% endblock %}
 
 {% block content %}
-<p>::: my contacts</p>
+<h3>::: My contacts</h3>
 
-<h3>email</h3>
-
+<h3>Email</h3>
 <p><a href="mailto:tox@tox.wtf">tox@tox.wtf</a></p>
 
-<h3>discord</h3>
+<h3>Discord</h3>
 <p>tox-wtf</p>
 
-<!-- TODO: Self-host forgejo or stagit or cgit or something -->
-<h3>git hosts</h3>
+<!-- TODO: Self-host -->
+<h3>Git</h3>
 <ul>
-    <li><a href="https://git.gay/tox">gitgay</a></li>
-    <li><a href="https://github.com/tox-wtf">github</a></li>
+    <li><a href="https://git.gay/tox">dotgay</a></li>
+    <li><a href="https://codeberg.org/tox">Codeberg</a></li>
+    <li><a href="https://github.com/tox-wtf">GitHub</a></li>
 </ul>
 
 {% endblock %}
