--- a/pages/self/index.html
+++ b/pages/self/index.html
@@ -6,12 +6,12 @@
 
 {% block content %}
 
-<p>::: self</p>
+<h3>::: Self-referential information</h3>
 
 <ul>
-    <li><a href="about">about</a> ::: about this site</li>
-    <li><a href="bio">bio</a> ::: about me</li>
-    <li><a href="contacts">contacts</a> ::: send me shit</li>
+    <li><a href="about">about</a> ::: About this site</li>
+    <li><a href="bio">bio</a> ::: About me</li>
+    <li><a href="contacts">contacts</a> ::: Send me shit</li>
     <li><a href="subdomains">subdomains</a> ::: *.tox.wtf</li>
 </ul>
 
