--- a/pages/self/subdomains.html
+++ b/pages/self/subdomains.html
@@ -5,15 +5,15 @@
 {% endblock %}
 
 {% block content %}
-<p>::: other stuff i host here</p>
+<h3>::: Other stuff I host here</h3>
 
-<h3>man pages</h3>
-<p><a href="https://man.tox.wtf">man.tox.wtf</a></p>
-
-<h3>lfs books</h3>
+<h3>*LFS books</h3>
 <p><a href="https://lfs.tox.wtf">lfs.tox.wtf</a></p>
 
-<h3>vat version tracking</h3>
+<h3>Man pages</h3>
+<p><a href="https://man.tox.wtf">man.tox.wtf</a></p>
+
+<h3>Vat's version database</h3>
 <p><a href="https://vat.tox.wtf">vat.tox.wtf</a></p>
 
 {% endblock %}
