--- a/pages/e/403.html
+++ b/pages/e/403.html
@@ -2,10 +2,10 @@
 {% block content %}
 
 <h2><a href=/>/</a><a href=/???/>???/</a></h2>
-<p>::: 403</p>
+<h3>::: 403</h3>
 
 <p>
-access denied. eat shit :)
+Access denied. Eat shit and die :)
 </p>
 
 {% endblock %}
