--- a/pages/e/500.html
+++ b/pages/e/500.html
@@ -2,10 +2,10 @@
 {% block content %}
 
 <h2><a href=/>/</a><a href=/???/>???/</a></h2>
-<p>::: 500</p>
+<h3>::: 500</h3>
 
 <p>
-internal server error? fuck, what'd i do?
+Internal server error; my bad gang.
 </p>
 
 {% endblock %}
