--- a/pages/imgs/pfp.html
+++ b/pages/imgs/pfp.html
@@ -5,23 +5,23 @@
 {% endblock %}
 
 {% block content %}
-<p>::: my profile picture</p>
+<h3>::: My profile picture</h3>
 
 <p>
-there's a fair amount of story behind this. the image is from an anime
-called ergo proxy. i haven't watched it. i first saw this image in a slowed
-version of sewerslvt's hopelessness. great track.
+There's a fair amount of story behind this. The image is from an anime
+called Ergo Proxy. I haven't watched it, though I've heard it's very good. I
+first saw this image in a slowed version of Sewerslvt's hopelessness.
 </p>
 
 <p>
-that song continued to hang out in my head, and i really loved the aesthetic of
-the image. so uh, it's been my profile picture for a bit. i've since upscaled it
+That song continued to hang out in my head, and I really loved the aesthetic of
+the image. So uh, it's been my profile picture for a bit. I've since upscaled it
 to appease those pesky online services that set minimum resolution requirements.
 </p>
 
 <p>
-the only lyrics in the song are sampled from girls' last tour, another anime
-i've not watched. they translate to
+The only lyrics in the song are sampled from Girls' Last Tour, another anime
+I've not watched. They translate to
 </p>
 
 <blockquote>
@@ -29,13 +29,12 @@ it's hopeless... it's so peaceful.
 </blockquote>
 
 <p>
-which quite eloquently sums up my perspective on the world. kinda finding peace
-in the hopelessness. not as in giving up, nor really acceptance, but rather
-unshackling, vivid clarity.
+which quite eloquently sums up my perspective on the world -- kinda making peace
+with and finding peace in the hopelessness.
 </p>
 
 <p>
-that was actually less story than i thought.
+That was actually less story than I thought.
 </p>
 
 <img src="/s/imgs/pfp.jpg" alt="ergo proxy pfp" width=360 height=360>
