--- a/pages/pkgs/entr.html
+++ b/pages/pkgs/entr.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-<p>::: run arbitrary commands on file change</p>
+<h3>::: Run arbitrary commands on file change</h3>
 
 <pre>
 <code>
