--- a/pages/pkgs/hwdata.html
+++ b/pages/pkgs/hwdata.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-<p>::: hardware identification and configuration data</p>
+<h3>::: Hardware identification and configuration data</h3>
 
 <pre>
 <code>
