--- a/pages/pkgs/libretls.html
+++ b/pages/pkgs/libretls.html
@@ -5,18 +5,15 @@
 {% endblock %}
 
 {% block content %}
-<p>::: port of libtls from libressl to openssl</p>
+<h3>::: Port of libtls from libressl to openssl</h3>
 
-<pre>
-<code>
-git clone --depth=1 https://git.causal.agency/libretls .
+<pre><code>git clone --depth=1 https://git.causal.agency/libretls .
 
 autoreconf -fiv
 
 ./configure --prefix=/usr
 make
 make install
-</code>
-</pre>
+</code></pre>
 
 {% endblock %}
