--- a/pages/pkgs/rg.html
+++ b/pages/pkgs/rg.html
@@ -5,11 +5,9 @@
 {% endblock %}
 
 {% block content %}
-<p>::: recursive grep</p>
+<h3>::: Recursive grep</h3>
 
-<pre>
-<code>
-git clone --depth=1 https://github.com/burntsushi/ripgrep .
+<pre><code>git clone --depth=1 https://github.com/burntsushi/ripgrep .
 
 cargo build --release --features=pcre2
 install -vDm755 target/release/rg -t /usr/bin/
@@ -18,7 +16,6 @@ rg --generate complete-bash |
     install -vDm644 /dev/stdin /usr/share/bash-completion/completions/rg
 rg --generate man           |
     install -vDm644 /dev/stdin /usr/share/man/man1/rg.1
-</code>
-</pre>
+</code></pre>
 
 {% endblock %}
