--- a/pages/pkgs/xxhash.html
+++ b/pages/pkgs/xxhash.html
@@ -5,16 +5,13 @@
 {% endblock %}
 
 {% block content %}
-<p>::: extremely fast non-cryptographic hash algorithm</p>
+<h3>::: Extremely fast non-cryptographic hash algorithm</h3>
 
-<pre>
-<code>
-git clone --depth=1 https://github.com/haampie/libtree .
+<pre><code>git clone --depth=1 https://github.com/haampie/libtree .
 
 make PREFIX=/usr DISPATCH=1
 make PREFIX=/usr DISPATCH=1 install
 rm -vf /usr/lib/libxxhash.a
-</code>
-</pre>
+</code></pre>
 
 {% endblock %}
