--- a/pages/read/freedom.html
+++ b/pages/read/freedom.html
@@ -5,16 +5,16 @@
 {% endblock %}
 
 {% block content %}
-<p>::: an honest definition</p>
+<h3>::: An honest definition</h3>
 
 <p>
-freedom means the right to private property, to accumulate capital, hoard
+Freedom means the right to private property, to accumulate capital, hoard
 wealth, and consequently exploit the working class for all the surplus value
 their productive labor creates.
 </p>
 
 <p>
-freedom means the right to have ten political parties in parliament whose only
+Freedom means the right to have ten political parties in parliament whose only
 purpose is to provide the illusion of choice, the illusion of different
 perspectives on social issues, while lobbyism and corruption run rampant, and is
 an integral part of the electoral process, where enormous cartels and
@@ -23,17 +23,17 @@ your pathetic vote being sold to the highest bidder.
 </p>
 
 <p>
-freedom means the right to enslave third world countries, militarily and
-economically, the right to set up sweatshops in indonesia, bangladesh, and
-pakistan with legal slaves and child laborers who will break their backs to turn
-a profit for western corporations. it means the same old predatory practices of
+Freedom means the right to enslave third world countries, militarily and
+economically, the right to set up sweatshops in Indonesia, Bangladesh, and
+Pakistan with legal slaves and child laborers who will break their backs to turn
+a profit for western corporations. It means the same old predatory practices of
 colonialism and imperialism where settlers would have the right to genocide
 native populations and keep slaves, just cloaked in more subtle forms, such as
 debtors' prison and unequal exchange deals.
 </p>
 
 <p>
-freedom means the right of corporations and media conglomerates to
+Freedom means the right of corporations and media conglomerates to
 psychologically cripple the entire population, while stealing their data,
 manipulating their attention, bombarding them with advertisements, flashy
 reality shows, tasteless mumbling referred to as "music," and other elements of
@@ -43,13 +43,13 @@ drones, all the while preaching about "personal liberties."
 </p>
 
 <p>
-freedom means the right to shamelessly lie about and circumvent environmental
+Freedom means the right to shamelessly lie about and circumvent environmental
 and ethical regulations, to greenwash old, predatory, and destructive practices
 in the pursuit of profit.
 </p>
 
 <p>
-freedom means the right of media outlets to bombard the populus with fraudulent
+Freedom means the right of media outlets to bombard the populus with fraudulent
 news and conservative and liberal propaganda in the wake of tragic events, to
 lie to them and cause mass hysteria with terrorism and fabricated threats, with
 the goal of manipulating public opinion in favor of invading a third world
@@ -58,36 +58,36 @@ security."
 </p>
 
 <p>
-freedom means the right of nazis and fascists to speak freely, so that they can
+Freedom means the right of nazis and fascists to speak freely, so that they can
 jump in and save the day in case capital becomes threatened by workers'
 movements, or god forbid, a communist revolution.
 </p>
 
 <p>
-freedom means the banning of labor movements, the rolling back of social
+Freedom means the banning of labor movements, the rolling back of social
 benefits achieved through decades of class struggle as soon as there's no
-imminent threat to their exploitative systems. just like the steady removal of
+imminent threat to their exploitative systems. Just like the steady removal of
 social democratic safety nets and social benefits from western countries, as
-soon as the ultimate threat, the soviet union, was out of the picture.
+soon as the ultimate threat, the Soviet Union, was out of the picture.
 </p>
 
 <p>
-and for the average person, well, freedom means the right to indulge in hedonist
+And for the average person, well, freedom means the right to indulge in hedonist
 consumer culture, to become a slave to commodities, to fetishize their control
-over our lives. it means the right to spend your entire day on social media with
+over our lives. It means the right to spend your entire day on social media with
 your every move tracked with cookies, monitored over your camera and microphone,
 and manipulated by the algorithm.
 </p>
 
 <p>
-freedom means the right to be greedy, self-interested, and ruthless in hopes
+Freedom means the right to be greedy, self-interested, and ruthless in hopes
 that you'll one day become part of the higher class, just after your sleepless
 nights of self-exploitative grinding and hustling are stamped with that one
 lucky break that's standing between you and success.
 </p>
 
 <p>
-freedom means the right to toil away in a faceless corporation in a mundane,
+Freedom means the right to toil away in a faceless corporation in a mundane,
 bullshit job in finance, stock trading, marketing, and similar corporate jobs
 that offer no benefit for society while burning yourself out for the friendly
 face of authority, and ironically, serving as a cog in a cold, monstrous
@@ -95,21 +95,21 @@ machine, alienated from your labor, your environment, and your own existence.
 </p>
 
 <p>
-freedom means the right to be unemployed and homeless.
+Freedom means the right to be unemployed and homeless.
 </p>
 
 <p>
-freedom means union busting, being told, "hey, you're being cocky with your
-demands. look at this entire army of desperate people who'd be ready to take
+Freedom means union busting, being told, "Hey, you're being cocky with your
+demands. Look at this entire army of desperate people who'd be ready to take
 this job no matter the conditions or the pay."
 </p>
 
 <p>
-such is freedom
+Such is freedom.
 </p>
 
 <p>
-    -- balkan odyssey, with minor alterations
+    -- Balkan Odyssey, with minor alterations
 </p>
 
 {% endblock %}
