feat: add 88x31 badges

--- a/pages/imgs/index.html
+++ b/pages/imgs/index.html
@@ -11,6 +11,7 @@
 <ul>
     <li><a href="renders/">renders/</a> ::: Images I've made</li>
     <li><a href="pfp">pfp</a> ::: My profile picture</li>
+    <li><a href="88x31">88x31</a> ::: Awesome badges !!!</li>
 </ul>
 
 {% endblock %}
